# compass_yr1

./: .gitignore  README.md
.github/workflows/: R-CMD-check.yaml  test-coverage.yaml
Bootcamp/: Bootcamp.pptx
Bootcamp/Handout/: appendix.tex  main.tex  paper_1.tex  refs.bib
Mini_Project/: .gitignore  README.md  requirements.txt
Mini_Project/Proposal/: main.tex  paper_1.tex  refs.bib
Mini_Project/Report/: 1_Intro.tex  2_Background.tex  3_Related.tex  4_Method.tex  5_Experiment.tex  6_Conclusion.tex  appendix.tex  main.tex  refs.bib
Mini_Project/src/: CIFAR10.sh  CIFAR100.sh  MNIST.sh  data.py  encoded_data_dimensions.txt  job.sh  main.py  (+7 more)
SC2/: conv  converter.cpp  main.cpp  portfolio_1.ipynb  portfolio_3.Rmd  portfolio_4.Rmd  timestable  timestable.cpp  timestable.h
SC2/portfolio_1/neural_network/: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  Neural_Net.cpp  Neural_Net.h  Optimizer.h  Optimizer.tpp  Print_Utils.h  Print_Utils.inl  Unit_Tests.cpp  Utils.h  Utils.inl  cmake_install.cmake  neural_net
SC2/portfolio_1/neural_network/html/: Neural__Net_8h_source.html  annotated.html  classNeuralNetwork-members.html  classNeuralNetwork.html  classes.html  classthis.html  files.html
SC2/portfolio_1/neural_network/html/search/: all_0.js  all_1.js  classes_0.js  classes_1.js  searchdata.js
SC2/portfolio_1/neural_network/latex/: annotated.tex  classNeuralNetwork.tex  classthis.tex  refman.tex
SM2/: assessment_2.Rmd
Stat_comp/: Assesed_CW_1.Rmd  Assesed_CW_2.Rmd
labs/: .gitignore  lab_1.Rmd  lab_1.html  lab_2.Rmd  lab_3.Rmd  lab_5.Rmd  lab_5.html
(+419 files in other folders)
